[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-ninja-crud"
version = "0.6.1"
description = "Declarative Endpoints for RESTful APIs with Django Ninja."
authors = ["Hicham Bakri <hicham.bakri76@gmail.com>"]
maintainers = ["Hicham Bakri <hicham.bakri76@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/hbakri/django-ninja-crud"
repository = "https://github.com/hbakri/django-ninja-crud"
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
packages = [{ include = "ninja_crud" },]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
django = ">=4.2"
django-ninja = ">=1.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.0"
pre-commit = "^2.20.0"
pydoc-markdown = "^4.8.2"
pyyaml = "^6.0.1"
python-frontmatter = "^1.1.0"
django-rest-testing = "^0.1.0"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",  # type hints
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
]
