[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-ninja-crud"
version = "0.6.2"
description = "🧩 Modular, composable API views for scalable Django Ninja projects, with built-in CRUD."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Hicham Bakri", email = "hicham.bakri76@gmail.com"}]
maintainers = [{name = "Hicham Bakri", email = "hicham.bakri76@gmail.com"}]
keywords = ["django", "ninja", "crud", "api", "rest", "framework", "asyncio", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "django>=4.2",
    "django-ninja>=1.0",
]

[project.urls]
Homepage = "https://github.com/hbakri/django-ninja-crud"
Repository = "https://github.com/hbakri/django-ninja-crud"
Documentation = "https://django-ninja-crud.readme.io"

[tool.hatch.build.targets.wheel]
packages = ["src/ninja_crud"]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.0,<8.0",
    "pre-commit>=3.5.0,<4.0",
    "pydoc-markdown>=4.8.2,<5.0",
    "pyyaml>=6.0.1,<7.0",
    "python-frontmatter>=1.1.0,<2.0",
    "django-rest-testing>=0.1.0,<0.2",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",  # type hints
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
]
